k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: 376572378342.dkr.ecr.ap-south-1.amazonaws.com/wisecow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
      imagePullSecrets:
      - name: ecr-creds
