k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
  - name: http
    port: 80
    targetPort: 4499
